--- a/puma.css
+++ b/puma.css
@@ -746,3 +746,165 @@ li{
     display: flex;
     right: 2%;
 }
+.container10{
+    margin-top: 30px;
+    width: 100%;
+    height: 65vh;
+    background-color: blueviolet;
+    background-image: url(bgm.jpg);
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+    border-top: 1px solid rgb(141, 99, 57);
+    position: relative;
+
+}
+.im1{
+    position: absolute;
+    width: 18%;
+    height: 80%;
+    background-color: black;
+    left: 2%;
+    top: 8%;
+    background-image: url(im1.jpg);
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+}
+.im2{
+    width: 20%;
+    height: 40%;
+    background-color: blue;
+    position: absolute;
+    left: 25%;
+    top: 13%;
+    background-image: url(im2.jpg);
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+}
+.im3{
+    width: 24%;
+    height: 40%;
+    background-color: blueviolet;
+    position: absolute;
+    left: 24%;
+    top: 59%;
+    background-image: url(im3.jpg);
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+
+}
+.im4{
+    position: absolute;
+    width: 20%;
+    height: 80%;
+    background-color: black;
+    left: 50%;
+    top: 16%;
+    background-image: url(im4.jpg);
+    object-fit: cover;
+    background-position: center;
+    background-size: cover;
+}
+.t{
+    text-align: center;
+    position: absolute;
+    right: 5%;
+    top: 35%;
+}
+.t h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.t h3{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
+
+.bx1{
+    margin-top: 25px;
+    padding: 10px 20px;
+    color: white;
+    background-color: black;
+}
+.bx2{
+    padding: 10px 20px;
+    color: white;
+    background-color: black;
+    margin-left: 18px;
+}
+.container11{
+    margin-top: 50px;
+    background-color: rgb(255, 255, 255);
+    width: auto;
+    height: 55vh;
+    position: relative;
+    
+}
+.flex{
+    width: auto;
+    height: 40vh;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+    align-items: center;  
+    overflow-x: scroll;
+}
+.y1{
+    width: 30%;
+    height: 100%;
+    background-color: black;
+    margin: 20px;
+    
+}
+ .x1{
+    width: 100%;
+    height: 80%;
+    background-color: blue;
+} 
+.x1 img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+.r1{
+    width: 100%;
+    height: 20%;
+    background-color: rgb(255, 255, 255);
+    position: relative;
+}
+.r1 .price{
+    text-align: right;
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.cox{
+    width: 50px;
+    height: 25px;
+    background-color: rgb(227, 78, 23);
+    position:absolute;
+    top:11%;
+    border-radius: 7%;
+}
+.r1 h4{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.am{
+    padding-left: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.container12{
+        width: 100%;
+        height: 50vh;
+        background-color: chocolate;
+        background-image: url(wom.jpg);
+        object-fit: cover;
+        background-position: center;
+        background-size: cover;
+}
+
