--- a/puma.css
+++ b/puma.css
@@ -838,13 +838,13 @@ li{
 .container11{
     margin-top: 50px;
     background-color: rgb(255, 255, 255);
-    width: auto;
+    width: 100%;
     height: 55vh;
     position: relative;
     
 }
 .flex{
-    width: auto;
+    width: 100%;
     height: 40vh;
     background-color: rgb(255, 255, 255);
     display: flex;
@@ -854,7 +854,7 @@ li{
     overflow-x: scroll;
 }
 .y1{
-    width: 30%;
+    width: 22rem;
     height: 100%;
     background-color: black;
     margin: 20px;
@@ -864,10 +864,11 @@ li{
     width: 100%;
     height: 80%;
     background-color: blue;
+    position: relative;
 } 
 .x1 img{
     height: 100%;
-    width: 100%;
+    width: 22rem;
     object-fit: cover;
 }
 .r1{
@@ -884,11 +885,11 @@ li{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .cox{
-    width: 50px;
+    width: 15%;
     height: 25px;
     background-color: rgb(227, 78, 23);
     position:absolute;
-    top:11%;
+    left: 0;
     border-radius: 7%;
 }
 .r1 h4{
@@ -900,11 +901,232 @@ li{
 }
 .container12{
         width: 100%;
-        height: 50vh;
+        height: 65vh;
         background-color: chocolate;
-        background-image: url(wom.jpg);
+        background-image: url(irctc.jpg);
         object-fit: cover;
-        background-position: center;
+        background-position: top;
         background-size: cover;
+        position: relative;
+        display: flex;
+}
+.ct{
+    width: 40%;
+    height: 50vh;
+    position: absolute;
+    color: white;
+    text-align: center;
+    top:35%;
+    text-shadow: 1px 1px  4px black;
+}
+.ct h2{
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: lighter;
+}
+.ct h1{
+    font-size: 45px;
+}
+.bo{
+    position: absolute;
+    left: 13%;
+    top:70%;
+    
+}
+.bp{
+    padding: 10px 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+/* .icox img{
+    width: 40px;
+    height: 40px;
+    margin-left: 50px;
+    padding-right: 25px;
+} */
+/* .icox{
+    
+    position: absolute;
+    right: 5%;
+    top:3%;
+    border-right: 1px solid white;
+} */
+.mr{
+    background-color: aqua;
+}
+.cr{
+    width: 50%;
+    height:100%;
+    background-color: black;
+}
+.container13{
+    width: 100%;
+    height: 65vh;
+    background-color: black;
+    color: grey;
+    position: relative;
+}
+.dk1{
+    width: 25%;
+    height: 45vh;
+    background-color:  rgb(20, 19, 22);;
+    text-align: center;
+}
+.dkx{
+    padding-top: 10px;
+}
+.dk2{
+    width: 25%;
+    height: 45vh;
+    background-color:  rgb(20, 19, 22);;
+    
 }
 
+.dk3{
+    width: 25%;
+    height: 45vh;
+    background-color: rgb(20, 19, 22);;
+    text-align: left;
+}
+
+.dk4{
+    width: 25%;
+    height: 45vh;
+    background-color: rgb(20, 19, 22);
+}
+.dkx .mlu{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.dkx h3{
+    margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
+.dkm{
+    padding-top: 25px;
+    margin-left: 50px;
+}
+.dkm h3{
+    margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
+.dkr h2{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-top: 10px;
+}
+.dkr h3{
+    margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+
+}
+.dk3{
+
+    padding-left: 10px;
+}
+.line{
+    width: 100%;
+    height: 46vh;
+    background-color: black;
+    border-bottom: 1px solid white;
+    display: flex;
+    align-items: center;
+}
+.dk4 h2{
+    padding-top: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.dk4 h3{
+    margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
+.afline img{
+    width: 200px;
+    height:30px;
+}
+.lis{
+    width: 80%;
+    height: 35%;
+    
+}
+ul{
+    list-style-type: none;
+    display: flex;
+}
+.lis img{
+    padding-top: 25px;
+    padding-right: 30px;
+    width: 25px;
+    height: 25px;
+}
+.rx100{
+    width: 80px;
+    height: 100px;
+    border: 1px solid white;
+}
+.rx101{
+    width: 80px;
+    height: 100px;
+    border: 1px solid white;
+}
+.rx100 img{
+    width: 60px;
+    height:60px;
+    padding: 10px;
+}
+.rx101 img{
+    width: 60px;
+    height:60px;
+    padding: 10px;
+}
+.pr{
+    display: flex;
+    justify-content: space-evenly;
+    margin-right: 200px;
+}
+.dk4 .klkl{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.afline img{
+    width: 50px;
+    height: 30px;
+}
+.afline{
+    padding-top: 25px;
+    padding-right: 20px;
+}
+li{
+    padding-right: 20px;
+}
+.err{
+    display: flex;
+    justify-content: center;
+    width: 10%;
+    height: 10%;
+    position: absolute;
+    border: 1px solid white;
+    left: 40%;
+    bottom: 10%;
+}
+.india img{
+    width: 30px;
+    height: 30px;
+}
+.india{
+    padding-top: 13px;
+padding-right: 70px;
+}
+.txting{
+    padding-top: 15px;
+    position: absolute;
+   padding-left: 50px;
+}
+.theer{
+    color: gray;
+    position: absolute;
+    right: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
